# mathexec-sdks

./: .gitignore  LICENSE  README.md  smoke_test.mjs  smoke_test.py  surface.yaml
.github/workflows/: parity.yml  publish-js.yml  publish-python.yml
js/: README.md  package-lock.json  package.json
js/src/: index.ts
python/: LICENSE  README.md  pyproject.toml
python/mathexec/: __init__.py  client.py
scripts/: parity_check.py
